Update icon, logo.

--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -69,6 +69,7 @@
     "Display Settings": "表示設定",
 
     "New Post": "新規投稿",
+    "Create New Post": "新規投稿を作成",
     "Post": "投稿",
     "Content": "内容",
 
