--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -64,6 +64,7 @@
     "%d day(s) ago": "%d日前",
     "F jS": "n月j日",
     "F jS, Y": "Y年n月j日",
+    "Now": "今",
 
     "Search": "検索",
     "Update": "更新",
