利用規約の追加、一部修正。

--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -85,6 +85,7 @@
     "Types": "タイプ",
 
     "Avatar": "アイコン",
+    "Profile Image": "プロフィール画像",
 
     "Operation Menu": "操作メニュー",
     "Report This Post": "この投稿を報告",
